Closed Bug 1341082 Opened 7 years ago Closed 7 years ago

"ipc/mscom/Utils.cpp(7): fatal error C1083: Cannot open include file: 'mozilla/mscom/Registration.h': No such file or directory" with --disable-accessibility

Categories

(Core :: IPC, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox54 --- fixed

People

(Reporter: RyanVM, Unassigned)

References

Details

Attachments

(1 file, 1 obsolete file)

From https://hg.mozilla.org/mozilla-central/diff/f62e9d267ac5/ipc/mscom/Utils.cpp

Given that none of the newly-added code in Utils.cpp is ifdef ACCESSIBILITY, I'm going to fix this by unconditionally exporting Registration.h in moz.build instead of only exporting it if ACCESSIBILITY is defined.
OK, this one actually successfully compiles *and* links :)
Attachment #8839225 - Flags: review?(aklotz)
Comment on attachment 8839225 [details] [diff] [review]
add ACCESSIBILITY guards around the newly-added code

Review of attachment 8839225 [details] [diff] [review]:
-----------------------------------------------------------------

Okay. I'm not particularly thrilled with the state of the dependencies between Utils.cpp and Registration.cpp at the moment, but this will work in the meantime.
Attachment #8839225 - Flags: review?(aklotz) → review+
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/54175c795fbe
Add ACCESSIBILITY guards to functions in Utils.cpp that depend on it being enabled. r=aklotz
https://hg.mozilla.org/mozilla-central/rev/54175c795fbe
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
You need to log in before you can comment on or make changes to this bug.